--- a/css-ecommerce-page/styles.css
+++ b/css-ecommerce-page/styles.css
@@ -17,9 +17,9 @@
 }
 
 img {
-  height: 200px;
-  width: 200px;
-  object-fit: scale-down;
+  height: 275px;
+  width: 180px;
+  object-fit: cover;
 }
 
 .flex-direction-column {
@@ -46,15 +46,24 @@ img {
   font-size: 18px;
 }
 
-.fontweight700 {
-  font-weight: 700;
+.fontweight500 {
+  font-weight: 500;
 }
 
-.fontsize12 {
-  font-size: 12px;
+.fontsize10 {
+  font-size: 10px;
 }
 
 ins {
   text-decoration: none;
   background-color: #efe2d9;
+}
+
+.paddingleftright10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.border-radius {
+  border-radius: 40px;
 }
